--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,8 +15,13 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
